// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden plan > compiles the 50-position fixture to a stable program 1`] = `
{
  "aggKeys": [
    "1010|610000",
    "1010|611000",
    "1010|620000",
    "1010|621000",
    "1010|622000",
    "1010|628800",
    "1010|623000",
    "1010|624000",
    "1010|625000",
    "1010|630000",
    "1010|972000",
    "1010|972540",
    "1010|971000",
    "1010|612000",
    "1010|626000",
    "1010|627000",
    "1010|628000",
    "1010|628100",
    "1010|628150",
    "1010|628200",
    "1010|628400",
    "1010|628500",
    "1010|628600",
    "1010|628700",
    "1010|628300",
    "1010|971100",
    "1010|629000",
    "1010|629100",
    "1010|629200",
    "1010|629300",
    "1910|610000",
    "1910|611000",
    "1910|620000",
    "1910|621000",
    "1910|622000",
    "1910|628800",
    "1910|623000",
    "1910|624000",
    "1910|625000",
    "1910|630000",
    "1910|972000",
    "1910|972540",
    "1910|971000",
    "1910|612000",
    "1910|626000",
    "1910|627000",
    "1910|628000",
    "1910|628100",
    "1910|628150",
    "1910|628200",
    "1910|628400",
    "1910|628500",
    "1910|628600",
    "1910|628700",
    "1910|628300",
    "1910|971100",
    "1910|629000",
    "1910|629100",
    "1910|629200",
    "1910|629300",
    "1310|610000",
    "1310|611000",
    "1310|620000",
    "1310|621000",
    "1310|622000",
    "1310|628800",
    "1310|623000",
    "1310|624000",
    "1310|625000",
    "1310|630000",
    "1310|972000",
    "1310|972540",
    "1310|971000",
    "1310|612000",
    "1310|626000",
    "1310|627000",
    "1310|628000",
    "1310|628100",
    "1310|628150",
    "1310|628200",
    "1310|628400",
    "1310|628500",
    "1310|628600",
    "1310|628700",
    "1310|628300",
    "1310|971100",
    "1310|629000",
    "1310|629100",
    "1310|629200",
    "1310|629300",
  ],
  "arg0": "4125:3d9af934",
  "buyoutAggRow": "0:811c9dc5",
  "buyoutValues": "0:811c9dc5",
  "countScaled": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
  ],
  "daysPerMonth": "600:88f5a885",
  "defCount": 30,
  "defsInEmissionOrder": [
    "def-base",
    "def-accrual",
    "def-pension",
    "def-indemnity",
    "def-housing",
    "def-multblockrate",
    "def-transport",
    "def-custom",
    "def-overtime",
    "def-ss",
    "def-hc",
    "def-fte",
    "def-hours",
    "def-bankhol",
    "def-flatmonthly",
    "def-vacweighted",
    "def-multdays",
    "def-multrealdays",
    "def-multholdays",
    "def-multvac",
    "def-multservice",
    "def-multservicetotal",
    "def-weightedservice",
    "def-multtiered",
    "def-multhours",
    "def-hourspaid",
    "def-combadd",
    "def-combsub",
    "def-combmul",
    "def-costperhour",
  ],
  "holidayDays": "12:103696b8",
  "instructionCount": 4125,
  "lineAggRow": "1500:5669d3a7",
  "lineCount": 1500,
  "op": "4125:7dabb7ac",
  "outLine": "4125:42d2c276",
  "paramOfs": "4125:1edbe51c",
  "paramPool": "9083:0caf5d34",
  "paramPoolLength": 9083,
  "posFte": "50:937753cd",
  "posHeadcount": "50:b172a3d0",
  "posWeight": "50:1c0f44cd",
  "positionCount": 50,
  "positionInstrStart": "51:58006d3c",
  "positionStatRow": "50:ad482717",
  "realDays": "12:9b4676d3",
  "seasonality": "600:5eb027cc",
  "statKeys": [
    "F&B|Manager Salaried Pay",
    "Admin|Manager Salaried Pay",
    "Rooms|Associate Hourly Pay",
    "Admin|Casual Hourly Pay",
    "Rooms|Manager Salaried Pay",
    "Rooms|Casual Hourly Pay",
    "F&B|Associate Hourly Pay",
    "Admin|Associate Hourly Pay",
    "F&B|Casual Hourly Pay",
  ],
}
`;

exports[`golden plan > compiles the 200-position fixture to a stable program 1`] = `
{
  "aggKeys": [
    "1010|610000",
    "1010|611000",
    "1010|620000",
    "1010|621000",
    "1010|622000",
    "1010|628800",
    "1010|623000",
    "1010|624000",
    "1010|625000",
    "1010|630000",
    "1010|972000",
    "1010|972540",
    "1010|971000",
    "1010|612000",
    "1010|626000",
    "1010|627000",
    "1010|628000",
    "1010|628100",
    "1010|628150",
    "1010|628200",
    "1010|628400",
    "1010|628500",
    "1010|628600",
    "1010|628700",
    "1010|628300",
    "1010|971100",
    "1010|629000",
    "1010|629100",
    "1010|629200",
    "1010|629300",
    "1910|620000",
    "1910|610000",
    "1910|611000",
    "1910|621000",
    "1910|622000",
    "1910|628800",
    "1910|623000",
    "1910|624000",
    "1910|625000",
    "1910|630000",
    "1910|972000",
    "1910|972540",
    "1910|971000",
    "1910|612000",
    "1910|626000",
    "1910|627000",
    "1910|628000",
    "1910|628100",
    "1910|628150",
    "1910|628200",
    "1910|628400",
    "1910|628500",
    "1910|628600",
    "1910|628700",
    "1910|628300",
    "1910|971100",
    "1910|629000",
    "1910|629100",
    "1910|629200",
    "1910|629300",
    "1310|610000",
    "1310|611000",
    "1310|620000",
    "1310|621000",
    "1310|622000",
    "1310|628800",
    "1310|623000",
    "1310|624000",
    "1310|625000",
    "1310|630000",
    "1310|972000",
    "1310|972540",
    "1310|971000",
    "1310|612000",
    "1310|626000",
    "1310|627000",
    "1310|628000",
    "1310|628100",
    "1310|628150",
    "1310|628200",
    "1310|628400",
    "1310|628500",
    "1310|628600",
    "1310|628700",
    "1310|628300",
    "1310|971100",
    "1310|629000",
    "1310|629100",
    "1310|629200",
    "1310|629300",
  ],
  "arg0": "16503:209f982d",
  "buyoutAggRow": "0:811c9dc5",
  "buyoutValues": "0:811c9dc5",
  "countScaled": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
  ],
  "daysPerMonth": "2400:7fc3f50a",
  "defCount": 30,
  "defsInEmissionOrder": [
    "def-base",
    "def-accrual",
    "def-pension",
    "def-indemnity",
    "def-housing",
    "def-multblockrate",
    "def-transport",
    "def-custom",
    "def-overtime",
    "def-ss",
    "def-hc",
    "def-fte",
    "def-hours",
    "def-bankhol",
    "def-flatmonthly",
    "def-vacweighted",
    "def-multdays",
    "def-multrealdays",
    "def-multholdays",
    "def-multvac",
    "def-multservice",
    "def-multservicetotal",
    "def-weightedservice",
    "def-multtiered",
    "def-multhours",
    "def-hourspaid",
    "def-combadd",
    "def-combsub",
    "def-combmul",
    "def-costperhour",
  ],
  "holidayDays": "12:ea4f49c5",
  "instructionCount": 16503,
  "lineAggRow": "6000:14349c95",
  "lineCount": 6000,
  "op": "16503:815ca5d2",
  "outLine": "16503:bdad5cb4",
  "paramOfs": "16503:02e148e4",
  "paramPool": "36289:1daa7c51",
  "paramPoolLength": 36289,
  "posFte": "200:3a584275",
  "posHeadcount": "200:e9021f68",
  "posWeight": "200:a37b5405",
  "positionCount": 200,
  "positionInstrStart": "201:be4543d3",
  "positionStatRow": "200:001893e6",
  "realDays": "12:a5c9fb8a",
  "seasonality": "2400:317a4d24",
  "statKeys": [
    "Rooms|Manager Salaried Pay",
    "F&B|Manager Salaried Pay",
    "Admin|Casual Hourly Pay",
    "F&B|Casual Hourly Pay",
    "Rooms|Associate Hourly Pay",
    "F&B|Associate Hourly Pay",
    "Admin|Manager Salaried Pay",
    "Admin|Associate Hourly Pay",
    "Rooms|Casual Hourly Pay",
  ],
}
`;
